new data and file added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Newproject</title>
     </head>
     <body>
-        kanaram saini<br>full stage
+        kanaram saini full stage developar<br>full stage
     </body>
 </html>
