new data and file added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
         <title>Newproject</title>
     </head>
     <body>
-        kanaram saini full stage developar<br>full stage
+        kanaram saini <br>full stack developar
+	HTML<br>
+	CSS<br>
+	JAVASCRIPT<br>
+	React<br>
+	Nodejs<br>
+	MySQL<br>
+	MongoDB
+	
+
+	
     </body>
 </html>
