new data and file added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Newproject</title>
     </head>
     <body>
-        kanaram saini <br>full stack developar<br>
+        kanaram saini <br>full stack developer<br>
 	HTML<br>
 	CSS<br>
 	JAVASCRIPT<br>
