new data and file added

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
     <head>
         <title>Newproject</title>
@@ -11,7 +12,9 @@
 	Nodejs<br>
 	MySQL<br>
 	MongoDB
-	
+	<div>
+		<img src="logo2.jpg">
+	</div>
 
 	
     </body>
