new data and file added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Newproject</title>
     </head>
     <body>
+		<div style="width=100%">
+			<img src="logo2.jpg">
+		</div>
         kanaram saini <br>full stack developer<br>
 	HTML<br>
 	CSS<br>
@@ -12,9 +15,7 @@
 	Nodejs<br>
 	MySQL<br>
 	MongoDB
-	<div>
-		<img src="logo2.jpg">
-	</div>
+	
 
 	
     </body>
