--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Newproject</title>
     </head>
     <body>
-		<div style="width=100%">
-			<img src="logo2.jpg">
+		<div class="box-online" style="width=100%">
+			<img src="logo2.jpg" id="box-online-img">
 		</div>
         kanaram saini <br>full stack developer<br>
 	HTML<br>
