--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Newproject</title>
+        <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
 		<div class="box-online" style="width=100%">
