--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html>
     <head>
         <title>Newproject</title>
+        <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
-		<div class="box-online" style="width=100%">
-			
+    	<div class="container-fulid">
+    		<div class="row">
+		<div class=" col-lg-12 box-online">
+
+			</div>
+
 		</div>
+	</div>
         kanaram saini <br>full stack developer<br>
 	HTML<br>
 	CSS<br>
