--- a/index.html
+++ b/index.html
@@ -2,32 +2,22 @@
 <html>
     <head>
         <title>Newproject</title>
-        <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
-    	<div class="container-fulid">
-    		<div class="row">
-		<div class=" col-lg-12 box-online">
+		<h1 align="center">Hello
+			
+				&nbsp;
+				&nbsp;
+				&nbsp;
+		 word</h1>
+		 12<sup>th</sup><br>
 
-			</div>
-
-		</div>
-	</div>
-        kanaram saini <br>full stack developer<br>
-	HTML<br>
-	CSS<br>
-	JAVASCRIPT<br>
-	React<br>
-	Nodejs<br>
-	MySQL<br>
-	MongoDB
-	
-
+		H<sub>2</sub>O<br>
+		a<sup>2</sup>+b
+	<p align="justify"> <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia nec leo in aliquet. Pellentesque ornare pharetra nulla eu tempus. Ut tempor, lacus at porta ullamcorper, lacus sapien eleifend ex, vitae tempus nunc ante id magna. Curabitur justo mauris, condimentum at sagittis eu, rhoncus gravida sapien. Vestibulum sed cursus nibh.</b><i> Fusce a leo nibh. Maecenas ut aliquam eros, vitae luctus orci. Fusce volutpat ligula laoreet turpis</i> <u>maximus, id vehicula justo luctus.</u>
+</p>
+		<p align="justify"><b>Morbi condimentum lacus vel sem <s>eleifend iaculis.</s> Donec ante lectus, imperdiet a bibendum sed, luctus a risus. Nunc rutrum euismod nibh, quis hendrerit justo pretium eget. Maecenas ut elit ex. Donec sit amet odio arcu. Phasellus placerat sollicitudin enim pharetra aliquam. Sed ut nisi sit amet diam sollicitudin commodo. Nulla molestie <s>consectetur orci.</s> Suspendisse sodales mollis libero,</b> rhoncus congue lacus sagittis eget. Nunc mollis mi a est semper, in ultricies mauris fringilla. Pellentesque quis scelerisque purus. Praesent fringilla tellus nec nunc suscipit egestas. Sed porttitor mollis nulla porta bibendum. Sed a lacus condimentum odio lacinia suscipit. Nunc turpis enim, tincidunt sed mauris condimentum, sagittis ornare ligula. Integer vitae turpis molestie dolor suscipit tristique</p>
+     
 	
     </body>
 </html>
